# CS-260-Program-Analysis

./: .gitignore  CMakeLists.txt  Makefile  README.md  abstract_store.hpp  assn0.cpp  assn1_test.sh  build-analyses.sh  build.sh  datatypes.h  mfp_worklist.cpp  parser_test.sh  run-constants-analysis.sh  run-control.sh  run-generator.sh  run-intervals-analysis.sh  run-rdef.sh  run-slice.sh  run-solver.sh  run-taint.sh  test_abstract_store.cpp  test_interval_join
CPP/: CMakeLists.txt  assn0.cpp
LIR-Parser-Python/: lir.py
Python-Zach/: lir_parser.py  lir_parser_test.sh
assign-0-zach/: assign-0.md
constant-analysis/: abstract_store.hpp  constant_analysis.cpp  execute.hpp  readme.md
constant-analysis/constant-analysis-tests/: assign1.1.lir.json  assign1.3.lir.json  constants-noptr-call.lir.output  constants-ptr-call.lir.json  constants-ptr-nocall.lir  test.1.lir  test.1.lir.json  test.10.lir  test.10.lir.json  test.11.lir  test.11.lir.json  test.2.lir  test.3.lir  test.3.lir.json  test.4.lir  test.4.lir.json  test.5.lir  test.5.lir.json  test.6.lir  test.6.lir.json  test.7.lir  test.7.lir.json  test.8.lir  test.8.lir.json  test.9.lir  test.9.lir.json
constant-analysis/constant-analysis-tests/noptr-call/: test.1.lir.json  test.2.lir  test.2.lir.json
constraint-generator/: constraint-generator.cpp
constraint-generator/constraint-generator-tests/: andersen_example_1.lir  andersen_example_1.lir.json  andersen_example_1.lir.output  andersen_example_2.lir  andersen_example_2.lir.json  andersen_example_2.lir.output  andersen_example_3.lir  andersen_example_3.lir.json  andersen_example_3.lir.output  gen-direct-calls.lir  gen-direct-calls.lir.json  gen-direct-calls.lir.output  gen-indirect-calls.lir  gen-indirect-calls.lir.json  gen-indirect-calls.lir.output  gen-no-calls.lir  gen-no-calls.lir.json  gen-no-calls.lir.output
control-flow-analysis/: cfa_utils.hpp  control_flow_analysis.cpp
control-flow-analysis/control-flow-analysis-tests/: test.1.lir  test.1.lir.json  test.2.lir  test.2.lir.json
headers/: MFPWorklistAlgorithm.hpp  abstract_store.hpp  datatypes.h  execute.hpp  execute_interval_analysis.hpp  executepost.hpp  tokenizer.hpp
interval-analysis/: alpha.hpp  interval-analysis.cpp  interval_analysis  interval_analysis.cpp  interval_analysis.hpp  interval_execute.hpp  new_interval_analysis.cpp  test_interval_join.cpp  test_widen.cpp  widen.hpp
interval-analysis/interval-analysis-tests/: intervals-noptr-nocall.lir  intervals-noptr-nocall.lir.json  intervals-noptr-nocall.lir.output  test-copy.lir  test-copy.lir.json  test.1.lir.output  test.2.lir  test_loops.lir  test_loops.lir.json
pointer-analysis/: constraint_gen.cpp  constraint_solver.cpp  set_constraint_util.cpp
pointer-analysis/constraint-solver-tests/: test1
pointer-analysis/constraint-solver-tests/lam/: test1
program-dependence-graph/: cfa_utils.hpp  control_flow_analysis.cpp  control_flow_analysis.hpp  execute_rdef.hpp  mod_ref_utils.hpp  program_slicing.cpp  reachingdef.hpp
program-dependence-graph/pdg-tests/: test.1.lir  test.1.lir.json  test.2.lir  test.2.lir.json  test.3.lir  test.3.lir.json
reaching-definitions/: abstract_semantics.hpp  reaching_definitions.cpp  reaching_definitions.hpp
reaching-defn/: execute_rdef.hpp  reachingdef  reachingdef.cpp  rtype.hpp
signanalysis/: signanalysis  signanalysis.cpp
signanalysis/constant-analysis-tests/: test.1.lir.json  test.2.lir.json
taint-analysis/: execute_taint.hpp  execute_taint2.hpp  taint_analysis.cpp  taint_analysis2.cpp
tests/: test_abstract_store.cpp  test_worklist.cpp
(+201 files in other folders)
